use lcw/gamma function

--- a/Project.toml
+++ b/Project.toml
@@ -45,10 +45,9 @@ Adapt = "1.0"
 ArgParse = "1.1"
 CUDAapi = "3.1, 4.0"
 CUDAdrv = "6.0"
-CUDAnative = "2.10, 3.0"
 Combinatorics = "1.0"
 Coverage = "1.0"
-CuArrays = "1.7"
+CuArrays = "1.7, 2.1"
 Distributions = "0.22, 0.23"
 DocStringExtensions = "0.8"
 DoubleFloats = "1.1"
@@ -56,7 +55,6 @@ FileIO = "1.2"
 ForwardDiff = "0.10"
 GaussQuadrature = "0.5"
 JLD2 = "0.1"
-KernelAbstractions = "0.2.2"
 LazyArrays = "0.15, 0.16"
 Literate = "2.2"
 MPI = "0.12, 0.13, 0.14"
